Established connection with the DB

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -4,7 +4,7 @@ services:
       args:
         - NODE_ENV=development
     volumes:
-      - ./backend:/app:ro # syncs code on local machine with container code
+      - ./backend:/app # syncs code on local machine with container code
       - /app/node_modules #Prevents the bind mount from modifying the node_modules in the container
     environment:
       - NODE_ENV=development
