nginx configured to load balance traffic btw available node instances

--- a/backend/src/nginx/default.conf
+++ b/backend/src/nginx/default.conf
@@ -1,3 +1,7 @@
+upstream ecosnap_backend {
+    server ecosnap-backend:8080;
+}
+
 server {
     # 🌐 Step 1: Tell Nginx to listen for incoming web traffic on port 80 (HTTP)
     # Port 80 is the default port browsers use for normal web requests.
@@ -11,8 +15,7 @@ server {
         # 🔁 Step 3: Forward (proxy) all those /api requests to your Node.js container
         # In Docker, each service gets an internal hostname equal to its service name (here "express-backend").
         # So this line says: send requests to the container named "express-backend" on port 8080.
-        proxy_pass http://econsnap-backend:8080;
-
+        proxy_pass http://ecosnap_backend;
 
         # 🧾 Step 4: Pass along the original client's IP address
         # This way your Node.js app can log or identify who made the request.
@@ -34,4 +37,4 @@ server {
         proxy_redirect off;
 
     }
-    }
+}
