--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 services:
   nginx:
-    image: nginx
+    image: nginx:stable-alpine
     volumes:
       - ./backend/src/nginx/default.conf:/etc/nginx/conf.d/default.conf
 
-  econsnap-backend:
+  ecosnap-backend:
     image: nelson254/ecosnap-backend
     build:
       context: ./backend/
