--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "connect-redis": "^9.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.2",
+    "mongoose": "^8.19.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "redis": "^5.8.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
