Nginx configuration modified to load-balance btw my servers

--- a/backend/src/nginx/default.conf
+++ b/backend/src/nginx/default.conf
@@ -34,7 +34,6 @@ server {
 
         # 🚫 Step 8: Disable automatic redirects
         # Prevents Nginx from rewriting redirect URLs that come from your Node.js app.
-        proxy_redirect off;
-
+        proxy_redirect http://ecosnap_backend/ /;
     }
 }
