--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "connect-redis": "^9.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.2",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "redis": "^5.8.3"
