--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -14,4 +14,14 @@ services:
     environment:
       - NODE_ENV=development
     command: ["npm", "run", "dev"]
-  
+
+  # ecosnap-frontend:
+  #   environment:
+  #     - WATCHPACK_POLLING=true
+  #     - CHOKIDAR_USEPOLLING=true
+  #     - NODE_ENV=development
+
+  #   volumes:
+  #     - ./frontend:/frontend
+  #     - /frontend/node_modules
+  #   command: ["npm", "run","dev"]
